# AndrewOS

./: .env.example  .gitignore  README.md  flake.nix  user.nix  user.nix.example
assets/: bookmarks.html
dotfiles/alacritty/: alacritty.toml
dotfiles/fuzzel/: fuzzel.ini
dotfiles/neovim/: init.lua
dotfiles/sway/: config
dotfiles/waybar/: config  style.css
home-manager/: alacritty.nix  cli-tools.nix  fuzzel.nix  home.nix  hyprland.nix  lsps.nix  neovim.nix  scripts.nix  starship.nix  sway.nix  waybar.nix
home-manager/applications/: alacritty.nix  chatgpt.nix  chromium.nix  claude-code.nix  claude.nix  figma.nix  github.nix  linear.nix  nix-audit.nix  notion.nix  obsidian.nix  pavucontrol.nix  proton-pass.nix  wlogout.nix
home-manager/desktop/: default.nix  fuzzel.nix  hyprland.nix  sway.nix  swaync-config.json  swaync.nix  waybar.nix
home-manager/dev/: bat.nix  eza.nix  (+10 more)
neovim/: init.lua
shells/: jupyter.nix
themes/: default.nix
tools/nix-audit/: .envrc  .gitignore  CLAUDE.md  justfile  pyproject.toml
tools/nix-audit/src/nix_audit/: __main__.py  app.py  style.tcss
tools/nix-audit/src/nix_audit/models/: database.py
tools/nix-audit/src/nix_audit/screens/: audit.py  detail.py  help.py  packages.py  report.py  search.py
tools/nix-audit/src/nix_audit/services/: claude.py  derivation.py  nix.py  vulnix.py
tools/nix-audit/src/nix_audit/widgets/: search_bar.py
tools/nix-audit/src/tests/: conftest.py  test_app.py  test_audit_screen.py  test_claude_service.py  test_database.py  test_derivation_service.py  test_nix_service.py  test_vulnix_service.py
(+67 files in other folders)
