[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nix-audit"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["textual"]

[project.scripts]
nix-audit = "nix_audit.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
asyncio_mode = "auto"
