[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nix-audit"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["textual"]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]
lint = ["ruff"]

[project.scripts]
nix-audit = "nix_audit.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
asyncio_mode = "auto"
